--- a/store.html
+++ b/store.html
@@ -117,7 +117,7 @@
       <div align="center">
        <div class="face-photo2">
              <a href="yoshirogoods.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931621953784127508/7E659315-18AA-4093-99AB-086EBFA15322.png?width=1998&height=732" alt="タイトル画像2" width="800px" height="auto" class="face-photo2">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931638393434152980/31769EB5-8B6F-4757-834B-B2C6CF72DFFC.png?width=1998&height=732" alt="タイトル画像2" width="800px" height="auto" class="face-photo2">
              </a>
        </div>
       </div>
@@ -126,7 +126,7 @@
           
          <div class="content">
 
-             <font color="black"><i><b><big>¥1940〜（送料税込）　<font color="#d64c31">@booth</font></big></b>
+             <font color="black"><i><b><big>¥1940〜（送料税込）　<font color="#f33b3a">@booth</font></big></b>
              </br><b>出目良郎のゆるくてシュールなアパレルが登場！憂鬱な用事がある日のインナーに、初めて彼氏彼女が家に遊びに来るときの部屋着に、ビデオオンのオンライン授業時に……。様々なシーンであなたをゆるくします。</b></i>
              </br><small></small>
              </font>
