--- a/store.html
+++ b/store.html
@@ -127,7 +127,7 @@
          <div class="content">
 
              <font color="black"><i><b><big>¥1940〜（送料税込）　<font color="#f33b3a">@booth</font></big></b>
-             </br><b>出目良郎のゆるくてシュールなアパレルが登場！憂鬱な用事がある日のインナーに、初めて彼氏彼女が家に遊びに来るときの部屋着に、ビデオオンのオンライン授業時に……。様々なシーンであなたをゆるくします。</b></i>
+             </br>出目良郎のゆるくてシュールなアパレルが登場！憂鬱な用事がある日のインナーに、初めて彼氏彼女が家に遊びに来るときの部屋着に、ビデオオンのオンライン授業時に……。様々なシーンであなたをゆるくします。</i>
              </br><small></small>
              </font>
          
