--- a/store.html
+++ b/store.html
@@ -86,7 +86,7 @@
           
          <div class="content">
 
-             <font color="black"><i>><big>¥3891〜（送料税込）　<font color="#004da9">@suzuri</font></big>
+             <font color="black"><i><b><big>¥3891〜（送料税込）　<font color="#004da9">@suzuri</font></big></b>
              </br>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。</i>
              </br><small>※suzuri新春セール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から<font color="red">1000円引き</font>になります!!!!!</small>
              </font></br>
@@ -124,7 +124,7 @@
           
          <div class="content">
 
-             <font color="black"><i><big>¥1940〜（送料税込）　<font color="#f33b3a">@booth</font></big>
+             <font color="black"><i><b><big>¥1940〜（送料税込）　<font color="#f33b3a">@booth</font></big></b>
              </br>出目良郎のゆるくてシュールなアパレルが登場！憂鬱な用事がある日のインナーに、初めて彼氏彼女が家に遊びに来るときの部屋着に、ビデオオンのオンライン授業時に……。様々なシーンであなたをゆるくします。</i>
              </br><small></small>
              </font>
