--- a/store.html
+++ b/store.html
@@ -97,7 +97,7 @@
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント　</b>
             <br/>
-            普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。質問や希望などあればお気軽に！たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small>
+            普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。質問や希望などあればお気軽に！たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small></br>
          
             <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="200" height="auto">
             </div>
