--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -68,7 +68,7 @@
        <div align="center">
            <div class="goodstitle">1.&nbsp;出目良郎</div>
                </br>
-           <div class="goodssubtitle">シンプルな出目良郎のTシャツです！</div>
+           <div class="goodssubtitle">シンプルな出目良郎のTシャツです。</div>
        </div>
           
        <div align="center">
