--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -88,7 +88,7 @@
        <div align="center">
            <div class="goodstitle">2.&nbsp;よしろう（シュール）</div>
                </br>
-           <div class="goodssubtitle">シュールなネタTシリーズ。文字なしバージョンもあります。</br>「スマソ」は部員の&nbsp;み&nbsp;原案です。</div>
+           <div class="goodssubtitle">シュールなネタTシリーズ。文字なしバージョンもあります。</br>「スマソ」は某部員からいただいたアイデアです。</div>
        </div>
           
        <div align="center">
