--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -133,7 +133,7 @@
        <div align="center">
            <div class="goodstitle">4.&nbsp;脱力よしろう</div>
                </br>
-           <div class="goodssubtitle">一部のマニアからひっそりと支持を得ている脱力した良郎をTシャツにしました。"i'm done"は 「詰んだー」みたいな意味。</div>
+           <div class="goodssubtitle">一部のマニアからひっそりと支持を得ている脱力した良郎をTシャツにしました。"i'm done" は「オワタ」です。</div>
        </div>
           
        <div align="center">
