--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -156,7 +156,7 @@
        <div align="center">
            <div class="goodstitle">5.&nbsp;英字ロゴ</div>
                </br>
-           <div class="goodssubtitle">ハイテンションな英語シリーズ。"SUPER OK"で良郎が頭に乗せているのは「世界の七不思議」というボードゲームの箱です。</div>
+           <div class="goodssubtitle">ハイテンションな英語シリーズ。</br>"SUPER OK"で良郎が頭に乗せているのは「世界の七不思議」というボードゲームの箱です。</div>
        </div>
           
        <div align="center">
