--- a/home.html
+++ b/home.html
@@ -60,8 +60,9 @@
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" ><span style=background-color:#e5e5f7;>🚀活動アーカイブ</span></a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" ><span style=background-color:#e5e5f7;>🪐幹部紹介</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="store.html" ><span style=background-color:#e5e5f7;>🎁ONLINE STORE</span></a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#e5e5f7;>🌐このHPについて</span></a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="clock.html" ><span style=background-color:#e5e5f7;>【期間限定】さがキャン支部終末時計</span></a></div>
+        
       </div>
     </div>
     <div class="contents-wrapper">
