--- a/store.html
+++ b/store.html
@@ -88,7 +88,7 @@
 
              <font color="black"><i><b><big>¥3891〜（送料税込）　<font color="#004da9">@suzuri</font></big></b>
              </br>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。</i>
-             </br></br><small>※suzuri新春セール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から<font color="red">1000円引き</font>になります！あとこれは試していないので定かではないのですが、新規会員登録でさらに500円引きになるっぽい。</small>
+             </br></br><small>※suzuri新春セール期間中の2022/1/12〜2022/1/19の間に買うと、表示価格から<font color="red">1000円引き</font>になります！あとこれは試していないので定かではないのですが、<font color="red">新規会員登録でさらに500円引きのクーポンがもらえる</font>っぽい。</small>
              </font>
            
          
