--- a/home.html
+++ b/home.html
@@ -85,7 +85,8 @@
                 相模原→木(17:00~)<br/>
             <b>部員数</b></br>
                 2020年度 22名<br/>
-                2021年度 124名
+                2021年度 124名<br/>
+                2022年度 63名（2〜4年生のみ）
           </div>
           
           <div class="news-heading">★★★　SNS　★★★</div>
