--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
               <div class="news-list-content">
                 <div class="news-list-title">■後期対面活動（21.10.1）</div>
                 <div class="news-list-description">
-                    10月から対面活動が再開します。入部は通年で受け付けています。                
+                    10月から対面活動が再開します。               
                 </div>
 
             </div>
