--- a/slogan.html
+++ b/slogan.html
@@ -57,6 +57,12 @@
 
          <div class="profile">
     
+            <div class="tooltip2">
+            <p><big><b>1月　「挨拶と　ボドゲでつなぐ　笑顔の輪」　　　　　</b></big></p>
+            <div class="description2"><big>　俺を選べ　力を与える </big></div></div>
+
+            </br></br></br>
+             
             <!-- コピペここから -->
             <div class="tooltip2">
                 <p><big><b>12月　「さむい朝から　電車に揺られ　時間が来るまで　重ゲやる」　　　　　</b></big></p>
