--- a/slogan.html
+++ b/slogan.html
@@ -58,6 +58,11 @@
          <div class="profile">
     
             <div class="tooltip2">
+            <p><big><b>2月　「テンテンテンテンボウズボウズボウズボウズボウズ」　　　　　</b></big></p>
+            <div class="description2"><big>　「ナンジャモンジャデラックス」プレイ中に出た迷言 </big></div></div>
+            </br></br></br>
+             
+            <div class="tooltip2">
             <p><big><b>1月　「挨拶と　ボドゲでつなぐ　笑顔の輪」　　　　　</b></big></p>
             <div class="description2"><big>　俺を選べ　力を与える </big></div></div>
 
