--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
               <div class="news-list-content">
                 <div class="news-list-title">■2022年度新歓について🌸（22.3.9）←New!</div>
                 <div class="news-list-description">
-                    青学へ進学が決まった皆様、おめでとうございます！2022年度の新歓情報を発信するLINEオープンチャットを開設いたしました。少しでも興味を持ってくださった方は気軽にご参加ください。（入退室自由、匿名参加）                
+                    青学へ進学が決まった皆様、おめでとうございます！2022年度の新歓情報を発信する<a href="https://twitter.com/bodogebu_/status/1499018270720299013?s=20&t=hON7wIs9IfFXtOsREzgKvg">LINEオープンチャット</a>を開設いたしました。少しでも興味を持ってくださった方は気軽にご参加ください！（入退室自由、匿名参加）                
                 </div>
                   <hr width="400px">
               
