--- a/home.html
+++ b/home.html
@@ -91,13 +91,13 @@
           
           <div class="news-heading">★★★　SNS　★★★</div>
           <div class="profile-english">
-            <span style="color:white">&nbsp;<b>青山</b>キャンパス</span></br>&nbsp;
+            <span style="color:white">&nbsp;<b><big>青山</big></b>キャンパス</span></br>&nbsp;
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="85" height="85"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="85" height="85"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="85" height="85"></a>
             <a href="https://t.co/qqf5aTPJZx"><img src="https://media.discordapp.net/attachments/840252564242956298/951027387741650984/phonto_6.PNG?width=1044&height=1044" alt="新歓情報" width="85" height="85"></a>
     </br>
-              </br><span style="color:white">&nbsp;<b>相模原</b>キャンパス</span></br>&nbsp;
+              </br><span style="color:white">&nbsp;<b><big>相模原</big></b>キャンパス</span></br>&nbsp;
             <a href="https://twitter.com/sagakyan_BG"><img src="Twittericon.jpg" alt="ツイッター" width="85" height="85"></a>
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="85" height="85"></a>
             <a href="https://t.co/2dAtasN09F"><img src="https://media.discordapp.net/attachments/840252564242956298/951027387557113876/phonto_5.PNG?width=1044&height=1044" alt="質問箱" width="85" height="85"></a>
@@ -150,7 +150,7 @@
             <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「PLAY　FOR　SMILES</br>SMILES　FOR　LIFE」</font></a></i></b></big>
 
             <div class="description2"><big>𝑵𝑶 𝑴𝑼𝑺𝑰𝑪 𝑵𝑶 𝑳𝑰𝑭𝑬</br>TOWER RECORDS </big></div></div>
-            </br></br></br></br></br>
+            </br></br></br></br>
 <a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
             </div></br></br>
 
