--- a/aboutus.html
+++ b/aboutus.html
@@ -84,7 +84,7 @@
              <a href="https://twitter.com/uesgi800"><small>@uesgi800</small></a>
             
             <br/>
-            2003年、不死鳥伝説の土地（新潟県）に生まれる。ゲームとラノベと美味しいご飯とベイブレードと重量級ボドゲをこよなく愛する超ウルトラスーパーハイスペックチワワ。どんなに複雑なボドゲでも驚くほど素早くルールを理解し、初回プレイからきちんと勝ちにくるという天才。加えてものすごくわかりやすくインストを行うことができるという能力を持つ。一人暮らしで自炊の腕も磨き、他の追随を許さないハイスペックチワワの道を着実に歩んでいる。得意料理は麻婆豆腐とカルボナーラ。</big>
+            2003年、不死鳥伝説の土地（新潟県）に生まれる。ゲームとラノベと美味しいご飯とベイブレードと重量級ボドゲをこよなく愛するハイスペックチワワ。どんなに複雑なボドゲでも驚くほど素早くルールを理解し、初回プレイからきちんと勝ちにくるという天才。加えてものすごくわかりやすくインストを行うことができるという能力を持つ。一人暮らしで自炊の腕も磨き、他の追随を許さないハイスペックチワワの道を着実に歩んでいる。得意料理は麻婆豆腐とカルボナーラ。</big>
           </div>
           </div>
          
