--- a/aboutus.html
+++ b/aboutus.html
@@ -97,7 +97,7 @@
      <div class="profile5">
             <big><b>相模原キャンパス支部　支部長　</b>
             
-               <a href="https://twitter.com/ra_mlot"><small>@ra_mlot</small></a>
+               <a href="https://twitter.com/ra_mlot"><small>@ra_mlot</small></a>　　（ENFP）
             
             <br/>
             2002年1月、降誕。現在神奈川県町田市在住。ドミニオンとTRPGと筋トレに脳みそを支配されている。よく街中へドミニオンをやりに行っているためサークル実施日でも失踪することがある。ドミニオン日本リーグに参加するなど根っからのドミニオン愛好家だが、ドミニオン以外のボドゲ愛も深い。2021年度ボードゲーム愛好会【お嬢様杯】自称優勝者。</big>
