--- a/archive.html
+++ b/archive.html
@@ -78,7 +78,8 @@
         <!-- ./ポップアップの中身　ここまで -->
     </div>
     <label for="popup-on8"><div class="btn-close8">閉じる</div></label>
-  </div></div>          
+  </div></div>
+</div>           
             
          
       <div class="heading"><i>　　2021年度　活動アーカイブ　　</i></div>
