--- a/archive.html
+++ b/archive.html
@@ -79,7 +79,7 @@
     </div>
     <label for="popup-on8"><div class="btn-close8">閉じる</div></label>
   </div></div>
-</div>           
+</div>  </div>            
             
          
       <div class="heading"><i>　　2021年度　活動アーカイブ　　</i></div>
