--- a/archive.html
+++ b/archive.html
@@ -108,7 +108,7 @@
     <label for="popup-on8"><div class="btn-close8">閉じる</div></label>
   </div></div>
 
-</div>  </div>            
+</div>          
             
          
       <div class="heading"><i>　　2021年度　活動アーカイブ　　</i></div>
