--- a/archive.html
+++ b/archive.html
@@ -110,7 +110,7 @@
     <label for="popup-on9"><div class="btn-close9">閉じる</div></label>
   </div></div>
 
-</div>          
+</div></div>            
             
          
       <div class="heading"><i>　　2021年度　活動アーカイブ　　</i></div>
