--- a/aboutus.html
+++ b/aboutus.html
@@ -65,7 +65,7 @@
              <a href="https://twitter.com/Charlotte_mhw"><small>@Charlotte_mhw</small></a>  （ISFJ）
             
             <br/>
-            2001年、埼玉県ポーランド生まれ。TOEIC900点越えという面白さを持つ。ロケットリーグの大会に出たりもしている生粋のゲーマーで、美味しいご飯、かわいいもの、美しいもの、ゲーム全般が好き。昨年度は相模原支部長との不仲説が一部で噂されたが、これを真っ向から否定。ボドゲ部内でも随一の出目良郎ファン。</big>
+            2001年、埼玉県ポーランド生まれ。TOEIC900点越えという面白さを持つ。ロケットリーグの大会に出たりもしている生粋のゲーマーで、美味しいご飯、かわいいもの、美しいもの、ゲーム全般が好き。昨年度は相模原支部長との不仲説が一部で噂されたが、真っ向から否定している。ボドゲ部内でも随一の出目良郎ファン。</big>
           </div>
           </div>
              
