--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
             <hr width="400px">
               
               <div class="news-list-content">
-                <div class="news-list-title">■相模原支部開通（21.10.18）←New!</div>
+                <div class="news-list-title">■相模原支部開通（21.10.18）</div>
                 <div class="news-list-description">
                     希望者多数につき、相模原キャンパスでも活動を開始しました！                
                 </div>
