--- a/archive.html
+++ b/archive.html
@@ -101,13 +101,13 @@
        
        <!-- ポップアップの中身 -->
        </br></br><b>🦑第二回部内スプラ2大会を開催しました🦑</b><br>
-      <img src="https://media.discordapp.net/attachments/840252564242956298/969569414729039902/6796C189-2D94-44C2-8EF3-46328F92D67B.jpg" alt="チームスクショ" width="796px" height="448px"class="layer-img"></br>
+      <img src="https://media.discordapp.net/attachments/840252564242956298/969569414729039902/6796C189-2D94-44C2-8EF3-46328F92D67B.jpg" alt="チームスクショ" width="700px" height="400px"class="layer-img"></br>
        部内でスプラトゥーン2のエリア杯を開催しました！優勝チーム「下剋上」の皆さん、おめでとうございます👏</br>
        ※画像はHP更新主が参加している「チューリップ組」のスクショです！大会中にメンバーの1人が来ないという事態になり、メンバーのいとこ（6歳）が代打を務めることになりそうでしたが、なんとか正規メンバーで参加できました😊
       </br></br></br>
        <b>「チューリップ組」のフォーメーション</b></br>
       <img src="https://media.discordapp.net/attachments/840252564242956298/969581133283098634/unknown.png?width=562&height=1047" alt="作戦β" width="402px" height="753px"class="layer-img"></br>
-        フォーメーションβです。左親指のサムズアップ形に陣取り、敵を追い詰めるそうです。ちなみにチューリップ組の結果は0勝でした！来年は絶対に一勝します！</br></br></br>
+        前代表による、手書きの図説です。左親指のサムズアップ形に陣取り、敵を追い詰めるそうです。ちなみにチューリップ組の結果は0勝でした！来年は絶対に一勝します！</br></br></br>
         
         </br>
         2021年3月26日
