--- a/home.html
+++ b/home.html
@@ -147,7 +147,7 @@
             </br></br>
             <div class="news-heading"><div class="tooltip2">
                 
-            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「昨日までは友</br>盤を囲めば敵」</font></a></i></b></big>
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「昨日までは友　盤を囲めば敵」</font></a></i></b></big>
 
             <div class="description2"><big>協力ゲーこそ味方が敵</big></div></div>
             </br></br></br></br>
