--- a/store.html
+++ b/store.html
@@ -132,7 +132,7 @@
          <div class="designer-comment-s">
             <small><b>デザイナーからのコメント</b>
             <br/>
-            いろんな方向性のやつを作りました！もし利益が出た場合は部費に回します！</small>
+            いろんな方向性のやつを作りました。LINEスタンプも併せてよろしくお願いします！（もし利益が出た場合は活動費に回します）</small>
          </div>
          
 
