--- a/store.html
+++ b/store.html
@@ -88,7 +88,7 @@
 
              <font color="black"><i><b><big>¥3891〜（送料税込）　<font color="#004da9">@suzuri</font></big></b>
              </br>待望のボドゲ部オリジナル製品が登場！三種類の言葉と47色のカラーバリエーションで、脅威の141種展開。好きな色を見つけてぜひ一着お手元に。</i>
-             </br></br><small></small>
+             </br></br><small>年に数回ほどセールになる期間があるのでそれを待って買うのがおすすめです。</small>
              </font>
            
          
