--- a/store.html
+++ b/store.html
@@ -79,7 +79,7 @@
       <div align="center">
        <div class="face-photo2">
              <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931641187381690449/0FFF6185-93AC-40A8-B0EF-5E35D4ACF67A.gif?width=1998&height=745" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
+             <img src="https://media.discordapp.net/attachments/840252564242956298/931641187381690449/0FFF6185-93AC-40A8-B0EF-5E35D4ACF67A.gif?ex=6702ee78&is=67019cf8&hm=02a183abb35a335bfb8bb8991fcb36a0e9440646a5808da4c12839049f7e275d&=&width=1410&height=526" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
              </a>
        </div>
       </div>
