--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="85" height="85"></a>
             <a href="https://t.co/2dAtasN09F"><img src="https://media.discordapp.net/attachments/840252564242956298/951027387557113876/phonto_5.PNG?width=1044&height=1044" alt="質問箱" width="85" height="85"></a>
               </br></br></br>
-              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="https://media.discordapp.net/attachments/840252564242956298/917801055083982848/export_49.png" alt="ゆるキャラ" width="120" height="120">
+              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="https://bodoge-bu.github.io/github.io/titile_yoshirou.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
         
@@ -151,7 +151,7 @@
 
             <div class="description2"><big>協力ゲーこそ味方が敵</big></div></div>
             </br></br></br></br>
-<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
+<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://bodoge-bu.github.io/github.io/koukoku.png" alt="LINEスタンプ広告" width="370" height="60"></a>
             </div></br></br>
 
         
