--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
 
             <div class="description2"><big>協力ゲーこそ味方が敵</big></div></div>
             </br></br></br></br>
-<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://bodoge-bu.github.io/github.io/koukoku.png" alt="LINEスタンプ広告" width="370" height="60"></a>
+<a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://bodoge-bu.github.io/github.io/koukoku.jpeg" alt="LINEスタンプ広告" width="370" height="60"></a>
             </div></br></br>
 
         
