--- a/aboutus.html
+++ b/aboutus.html
@@ -169,7 +169,7 @@
 
      <div class="profile2">
             <big><b>副代表　</b>
-               <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>　
+               <a href=""><small>@</small></a>　
             
             <br/>
             2000年、神奈川県生まれ。ものづくり、収集、読書、短歌など文化全般が好き。フォントマニアであり、自分の字の綺麗さに飽きてしまい逆に汚い字を練習している。Twitterのトレンド地域を必ずオマーンに設定する習慣があるため、部の共同アカウントでアラビア語のトレンドしか見れないという弊害が起きている。</big>
