--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
         
       <div class="contents-wrapper-inner">
         <div class="content-left">
-          <div class="face-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/905639051321835520/image0.jpg?width=1042&height=1042" alt="ロゴ" width="300" height="300"></div>
+          <div class="face-photo"><img src="https://github.com/bodoge-bu/github.io/icon.jpg" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
             青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
@@ -95,12 +95,12 @@
             <a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="85" height="85"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="85" height="85"></a>
             <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="85" height="85"></a>
-            <a href="https://t.co/qqf5aTPJZx"><img src="https://media.discordapp.net/attachments/840252564242956298/951027387741650984/phonto_6.PNG?width=1044&height=1044" alt="新歓情報" width="85" height="85"></a>
+            <a href="https://t.co/qqf5aTPJZx"><img src="https://github.com/bodoge-bu/github.io/2022_aoyama.png" alt="新歓情報" width="85" height="85"></a>
     </br>
               </br><span style="color:white">&nbsp;<b><big>相模原</big></b>キャンパス</span></br>&nbsp;
             <a href="https://twitter.com/sagakyan_BG"><img src="Twittericon.jpg" alt="ツイッター" width="85" height="85"></a>
             <a href="https://peing.net/ja/sagakyan_bg"><img src="Peing.jpg" alt="質問箱" width="85" height="85"></a>
-            <a href="https://t.co/2dAtasN09F"><img src="https://media.discordapp.net/attachments/840252564242956298/951027387557113876/phonto_5.PNG?width=1044&height=1044" alt="質問箱" width="85" height="85"></a>
+            <a href="https://t.co/2dAtasN09F"><img src="https://github.com/bodoge-bu/github.io/2022_sagamihara.png" alt="質問箱" width="85" height="85"></a>
               </br></br></br>
               </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br>　　　　　　　　　　　　　　　<span style="color:black"></span><img src="https://bodoge-bu.github.io/github.io/titile_yoshirou.png" alt="ゆるキャラ" width="120" height="120">
           </div>
