--- a/store.html
+++ b/store.html
@@ -63,7 +63,7 @@
          </div>
            </br>
              <div align="center">
-             　　　　　　　　　　　　　　　　　　　<div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/930726734670741534/50B9781B-1FE4-4D53-8ADC-BFBE2FBA9BBD.png" alt="店主" width="150" height="150">
+             　　　　　　　　　　　　　　　　　　　<div class="deme-photo"><img src="https://github.com/bodoge-bu/github.io/ygoodstachie.png.png" alt="店主" width="150" height="150">
                     </div>
              </div>
            <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
@@ -79,7 +79,7 @@
       <div align="center">
        <div class="face-photo2">
              <a href="storesize.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931641187381690449/0FFF6185-93AC-40A8-B0EF-5E35D4ACF67A.gif?ex=6702ee78&is=67019cf8&hm=02a183abb35a335bfb8bb8991fcb36a0e9440646a5808da4c12839049f7e275d&=&width=1410&height=526" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/bodogebu_sweat.gif" alt="タイトル画像" width="800px" height="auto" class="face-photo2">
              </a>
        </div>
       </div>
@@ -99,7 +99,7 @@
             <br/>
             普段でも着やすいかつ学生感を意識してカレッジデザインにボドゲ部らしさを落とし込みました。たくさんのアイディアや意見を提供してくださった方々に感謝を申し上げます。</small></br>
          
-            <div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="200" height="auto">
+            <div class="deme-photo"><img src="https://github.com/bodoge-bu/github.io/yoshirou.png" alt="店主" width="200" height="auto">
             </div>
             </div>
 
@@ -113,7 +113,7 @@
       <div align="center">
        <div class="face-photo2">
              <a href="yoshirogoods.html">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931638393434152980/31769EB5-8B6F-4757-834B-B2C6CF72DFFC.png?width=1998&height=732" alt="タイトル画像2" width="800px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/goods_icon.png" alt="タイトル画像2" width="800px" height="auto" class="face-photo2">
              </a>
        </div>
       </div>
