--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -52,7 +52,7 @@
          </div>
              </br>
            <div align="left">
-               　　　　　<div class="deme-photo"><img src="https://media.discordapp.net/attachments/840252564242956298/931560287881019483/703CDBCF-EAAB-4998-BF4D-936BADB4EE49.png?width=1130&height=1046" alt="店主" width="200" height="auto">
+               　　　　　<div class="deme-photo"><img src="https://github.com/bodoge-bu/github.io/yoshirou.png" alt="店主" width="200" height="auto">
               </div>
            </div>
          <font color="white"><center><b>boothにて販売中！</br>それぞれ長袖もあります。</b></center></font>
@@ -74,7 +74,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/mzGT1lkn">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/932155499946860544/8A52DEE7-C606-4D54-AE3C-DB609C96475F.png?width=1410&height=524" alt="製品1出目良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods1.png" alt="製品1出目良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
         </div></font>
@@ -94,7 +94,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/nJgTbeJ8">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551520896483358/2D4F4CEE-1BA6-4FAE-A1FB-952C17235F40.png?width=1986&height=1046" alt="製品2シュールよしろう" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygood2.png" alt="製品2シュールよしろう" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
        </div></font>
@@ -115,7 +115,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/n54T9jQm">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551611837366282/42ABD0C4-3CD5-4F42-A137-EDE39D9D3BE1.png?width=1998&height=743" alt="製品3ボドゲと良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods3.png" alt="製品3ボドゲと良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -139,7 +139,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/mk5TqEl8">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551612709785671/5B852C0B-0123-4484-A419-9C3C4A94DB43.png?width=1998&height=743" alt="製品4脱力良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods4.png" alt="製品4脱力良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -162,7 +162,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/rM9TWd3r">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551712546795580/0D4367FD-AE79-4172-B682-51EB6FDF2B1A.png?width=1998&height=743" alt="製品5英字ロゴ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods5.png" alt="製品5英字ロゴ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -188,7 +188,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/rooTz7Ar">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551713134014544/11590B98-5951-4547-8D6C-07CA462F8AF6.png?width=1998&height=743" alt="製品6学名" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods6.png" alt="製品6学名" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -211,7 +211,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/nlkTQWQm">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/932155500542427136/833167DD-0A4B-4803-9510-0247042322DE.png?width=1410&height=445" alt="製品7ふかふかクッション" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods7.png" alt="製品7ふかふかクッション" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -234,7 +234,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/8XATYpgr">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/932155501213519884/61DB053B-EDEA-4803-AA5F-B2CB7840293B.png?width=1410&height=445" alt="製品8マグ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods8.png" alt="製品8マグ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -258,7 +258,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/8OVTldbn">
-             <img src="https://media.discordapp.net/attachments/840252564242956298/931551767836123146/BE80D5F8-C743-436A-B8F8-EBD09D994D64.png?width=1998&height=743" alt="製品9ノベルティ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://github.com/bodoge-bu/github.io/ygoods9.png" alt="製品9ノベルティ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -293,7 +293,7 @@
          </div>
     </div>
 </div>
-<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://media.discordapp.net/attachments/840252564242956298/920263044901244968/C9BA22E3-C991-47B4-B4CC-D0ECA4035B04_4_5005_c.jpeg" alt="LINEスタンプ広告" width="40%" height="auto"></a>
+<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://github.com/bodoge-bu/github.io/koukoku.jpeg" alt="LINEスタンプ広告" width="40%" height="auto"></a>
  
 </center>
           </br> </br>
