--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -52,7 +52,7 @@
          </div>
              </br>
            <div align="left">
-               　　　　　<div class="deme-photo"><img src="https://github.com/bodoge-bu/github.io/yoshirou.png" alt="店主" width="200" height="auto">
+               　　　　　<div class="deme-photo"><img src="https://bodoge-bu.github.io/github.io/yoshirou.png" alt="店主" width="200" height="auto">
               </div>
            </div>
          <font color="white"><center><b>boothにて販売中！</br>それぞれ長袖もあります。</b></center></font>
@@ -74,7 +74,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/mzGT1lkn">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods1.png" alt="製品1出目良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods1.png" alt="製品1出目良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
         </div></font>
@@ -94,7 +94,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/nJgTbeJ8">
-             <img src="https://github.com/bodoge-bu/github.io/ygood2.png" alt="製品2シュールよしろう" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygood2.png" alt="製品2シュールよしろう" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
        </div></font>
@@ -115,7 +115,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/n54T9jQm">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods3.png" alt="製品3ボドゲと良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods3.png" alt="製品3ボドゲと良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -139,7 +139,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/mk5TqEl8">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods4.png" alt="製品4脱力良郎" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods4.png" alt="製品4脱力良郎" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -162,7 +162,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/rM9TWd3r">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods5.png" alt="製品5英字ロゴ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods5.png" alt="製品5英字ロゴ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -188,7 +188,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/rooTz7Ar">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods6.png" alt="製品6学名" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods6.png" alt="製品6学名" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -211,7 +211,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/nlkTQWQm">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods7.png" alt="製品7ふかふかクッション" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods7.png" alt="製品7ふかふかクッション" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -234,7 +234,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/8XATYpgr">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods8.png" alt="製品8マグ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods8.png" alt="製品8マグ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -258,7 +258,7 @@
        <div align="center">
        <div class="face-photo2">
              <a href="https://bodogebumarket.booth.pm/item_lists/8OVTldbn">
-             <img src="https://github.com/bodoge-bu/github.io/ygoods9.png" alt="製品9ノベルティ" width="1200px" height="auto" class="face-photo2">
+             <img src="https://bodoge-bu.github.io/github.io/ygoods9.png" alt="製品9ノベルティ" width="1200px" height="auto" class="face-photo2">
              </a>
        </div>
 
@@ -293,7 +293,7 @@
          </div>
     </div>
 </div>
-<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://github.com/bodoge-bu/github.io/koukoku.jpeg" alt="LINEスタンプ広告" width="40%" height="auto"></a>
+<center><a href="https://store.line.me/stickershop/product/17669666/ja"><img src="https://bodoge-bu.github.io/github.io/koukoku.jpeg" alt="LINEスタンプ広告" width="40%" height="auto"></a>
  
 </center>
           </br> </br>
