--- a/archive.html
+++ b/archive.html
@@ -124,7 +124,7 @@
 </br></br>
               
     <div class="pop-box8">
-  <label for="popup-on8"><label for="popup-on8"><div class="btn-open8"><img src="https://media.discordapp.net/attachments/840252564242956298/926528088026779668/05ACDE98-E4AD-4B53-B772-2E6F3423C16E.jpeg?width=1568&height=1045" alt="" width="380" height="290"class="layer-img"></div></label>
+  <label for="popup-on8"><label for="popup-on8"><div class="btn-open8"><img src="https://bodoge-bu.github.io/github.io/bingo.jpeg" alt="" width="380" height="290"class="layer-img"></div></label>
   <input type="checkbox" id="popup-on8">
   <div class="popup8">
     <label for="popup-on8" class="icon-close8">×</label>
@@ -243,7 +243,7 @@
        <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="700px height="550px"class="layer-img4"></br></br></br>
 
        <b>↓大会ルール</b></br>
-      <img src="https://media.discordapp.net/attachments/835703913042018338/857953809073176596/image0.png?width=1500&height=1043" alt="大会ルール" width="500px" height="300px"class="layer-img4"></br></br></br>
+      <img src="https://bodoge-bu.github.io/github.io/dominion_rule.png" alt="大会ルール" width="500px" height="300px"class="layer-img4"></br></br></br>
        <b>↓決勝戦サプライ</b></br>
       <img src="https://bodoge-bu.github.io/github.io/deck1.jpeg" alt="決勝サプライ" width="500px" height="200px"class="layer-img4"></br></br></br>
       <b>↓優勝者ロール</b></br>
