--- a/yoshirogoods.html
+++ b/yoshirogoods.html
@@ -88,7 +88,7 @@
        <div align="center">
            <div class="goodstitle">2.&nbsp;よしろう（シュール）</div>
                </br>
-           <div class="goodssubtitle">シュールなネタTシリーズ。文字なしバージョンもあります。</br>「スマソ」は某部員からいただいたアイデアです。</div>
+           <div class="goodssubtitle">シュールなネタTシリーズ。文字なしバージョンもあります。</br>「スマソ」は部員からいただいたアイデアです。</div>
        </div>
           
        <div align="center">
@@ -133,7 +133,7 @@
        <div align="center">
            <div class="goodstitle">4.&nbsp;脱力よしろう</div>
                </br>
-           <div class="goodssubtitle">一部のマニアからひっそりと支持を得ている脱力した良郎をTシャツにしました。"i'm done" は「オワタ」みたいなニュアンスです。</div>
+           <div class="goodssubtitle">一部のマニアからひっそりと支持を得ている脱力した良郎をTシャツにしました。</div>
        </div>
           
        <div align="center">
@@ -289,7 +289,7 @@
             </center>
 
          <div class="designer-comment-s clear_box">
-            送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。とりあえず白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったからといって送料一律にはならないので注意。</small>
+            送料の発生の仕方が複雑なので、詳しくは<a href=https://factory.pixiv.help/hc/ja/articles/115000182314>こちら</a>をご覧ください。白Tとマグは2点以上だと送料固定されてちょっとお得になります。それ以外はたくさん買ったとしても送料が一律にはならないのでご注意ください。</small>
          </div>
     </div>
 </div>
