--- a/store.html
+++ b/store.html
@@ -63,7 +63,7 @@
          </div>
            </br>
              <div align="center">
-             　　　　　　　　　　　　　　　　　　　<div class="deme-photo"><img src="https://bodoge-bu.github.io/github.io/ygoodstachie.png.png" alt="店主" width="150" height="150">
+             　　　　　　　　　　　　　　　　　　　<div class="deme-photo"><img src="https://bodoge-bu.github.io/github.io/ygoodstachie.png" alt="店主" width="150" height="150">
                     </div>
              </div>
            <font color="white"><center><b>ボドゲ部のお店です。出目良郎がバイトで働いています。</b></center></font>
