--- a/storesize.html
+++ b/storesize.html
@@ -63,11 +63,11 @@
 　
   <div align="center">
     <div class="face-photo2">
-                <a href="storewordb.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521727860837/7BE540EA-99EC-41E2-A382-8AC8BD3FD150.png?width=874&height=1045" alt="BIG" hight="auto" width="40%"></a>
+                <a href="storewordb.html"><img src="https://bodoge-bu.github.io/github.io/BIGsweat.png" alt="BIG" hight="auto" width="40%"></a>
     </div>　
     
     <div class="face-photo2">
-                <a href="storewords.html"><img src="https://media.discordapp.net/attachments/840252564242956298/929810521992069160/5A5F0DD6-A2C5-47C5-8920-C634E61D59A3.png?width=874&height=1045" alt="NORMAL" hight="auto" width="40%"></a>
+                <a href="storewords.html"><img src="https://bodoge-bu.github.io/github.io/NORMALsweat.png" alt="NORMAL" hight="auto" width="40%"></a>
     </div>　
   </div>
     </br></br>
