--- a/storesmallc.html
+++ b/storesmallc.html
@@ -273,7 +273,7 @@
     </div>
 
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/darkbrown"><img src="https://bodoge-bu.github.io/github.io/darkbrown_yellow.png" alt="darkbrown_yellow" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058377/sweat/s/darkbrown"><img src="https://bodoge-bu.github.io/github.io/darkbrown_white.png" alt="darkbrown_white" hight="auto" width="15%"></a>
     </div>
 
 
