--- a/storesmallc.html
+++ b/storesmallc.html
@@ -140,7 +140,7 @@
     </div>
     
     <div class="face-photo">
-                <a href="https://suzuri.jp/-Ei-/9058596/sweat/s/white"><img src="https://bodoge-bu.github.io/github.io/white_kusumizuro.png" alt="white_kusumizuiro" hight="auto" width="15%"></a>
+                <a href="https://suzuri.jp/-Ei-/9058596/sweat/s/white"><img src="https://bodoge-bu.github.io/github.io/white_kusumizuiro.png" alt="white_kusumizuiro" hight="auto" width="15%"></a>
     </div>
     
     <div class="face-photo">
