--- a/storesmalld.html
+++ b/storesmalld.html
@@ -28,7 +28,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="https://media.discordapp.net/attachments/840252564242956298/930018799506317312/44FFE9AA-539A-4416-813F-70647BFF201D.png">
+  <link rel="icon" type="image/jpg" href="https://bodoge-bu.github.io/github.io/bmarket.jpg">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
